--- a/stylesheets/_utility-visibility.scss
+++ b/stylesheets/_utility-visibility.scss
@@ -2,6 +2,9 @@
 // Visibility Utility
 // ==========================================================================
 
+@import "tool-global-config";
+@import "breakpoint";
+
 /*doc
 ---
 title: Visibility
