--- a/stylesheets/_utility-visibility.scss
+++ b/stylesheets/_utility-visibility.scss
@@ -2,8 +2,8 @@
 // Visibility Utility
 // ==========================================================================
 
-@import "tool-global-config";
-@import "breakpoint";
+@import "~mep-tools.global-config";
+@import "~breakpoint-sass";
 
 /*doc
 ---
